# wandb-tutorial

./: .gitignore  README.md  pyproject.toml
artifacts/models/2022-10-07T21:24:44/: epoch=0-step=1719.ckpt  model.onnx
src/: basic_logging.py  dataset_versioning.py  lightning.py  log_digits_ds.py  mask_box.py  optuna_.py  pl_mnist_model.py  plots.py  sweep.py
