[tool.poetry]
name = "wandb-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "3.8.12"
wandb = "^0.13.3"
pandas = "^1.5.0"
torch = "^1.12.1"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
plotly = "^5.10.0"
scikit-learn = "^1.1.2"
pytorch-lightning = "^1.7.7"
torchvision = "^0.13.1"
optuna = "^3.0.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
flake8 = "^5.0.4"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
